--- a/yjk-web/src/main/report/drugdeclaretongji.jrxml
+++ b/yjk-web/src/main/report/drugdeclaretongji.jrxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="commonname" language="groovy" pageWidth="3000" pageHeight="842" columnWidth="3000" leftMargin="0" rightMargin="0" topMargin="0" bottomMargin="0">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="commonname" language="groovy" pageWidth="3100" pageHeight="842" columnWidth="3100" leftMargin="0" rightMargin="0" topMargin="0" bottomMargin="0">
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
@@ -21,8 +21,14 @@
 	<parameter name="departname" class="java.lang.String">
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
+	<parameter name="declareStartDate" class="java.sql.Timestamp">
+		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
+	</parameter>
+	<parameter name="declareEndDate" class="java.sql.Timestamp">
+		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
+	</parameter>
 	<queryString>
-		<![CDATA[SELECT declare_date, declare_reason, dosage, indications_effect, remark,declarecategory,
+		<![CDATA[SELECT to_char(t1.id,'00000000') as id,declare_date, declare_reason, dosage, indications_effect, remark,declarecategory,
 case when is_preparationed then '是' else '否' end as preparationed,constituent,t2.realname,
 t4.common_name,t4.administration_id,t4.pill,t4.specifications,t4.medical_category,
 t5.common_name as extract_common_name,t5.match_number,t5.chemical_big_category,t5.chemical_sub_category,
@@ -36,9 +42,10 @@ left join zd_common_name t5 on t4.common_name_id=t5.id
 where (t1.system_parameter_id =$P{systemParameterId} or $P{systemParameterId} is null)
 and t1.auditstatus like '%'||$P{auditstatus}||'%' and  t2.realname like '%'||$P{realname}||'%'
 and t5.drugcategory like  '%'||$P{drugcategory}||'%' and (t1.declarecategory like '%'||$P{declarecategory}||'%' or $P{declarecategory}='')
-and ((select string_agg(t7.name,',') from sec_organization t7 where t7.id in (select t6.organization_id from sec_user_organization_job t6 where t6.user_id=t1.user_id)) like '%'||$P{departname}||'%' or $P{departname} = '')
-order by t1.auditstatus]]>
+and ((select string_agg(t7.name,',') from sec_organization t7 where t7.id in (select t6.organization_id from sec_user_organization_job t6 where t6.user_id=t1.user_id)) like '%'||$P{departname}||'%' or $P{departname} = '') and t1.declare_date>=$P{declareStartDate} and t1.declare_date<=$P{declareEndDate}
+order by t1.id ASC]]>
 	</queryString>
+	<field name="id" class="java.lang.String"/>
 	<field name="declare_date" class="java.sql.Timestamp"/>
 	<field name="declare_reason" class="java.lang.String"/>
 	<field name="dosage" class="java.lang.String"/>
@@ -71,7 +78,7 @@ order by t1.auditstatus]]>
 	<title>
 		<band height="29" splitType="Stretch">
 			<staticText>
-				<reportElement x="110" y="0" width="142" height="29"/>
+				<reportElement x="187" y="0" width="142" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -84,7 +91,7 @@ order by t1.auditstatus]]>
 				<text><![CDATA[软件通用名]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="68" y="0" width="42" height="29"/>
+				<reportElement x="145" y="0" width="42" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -97,7 +104,7 @@ order by t1.auditstatus]]>
 				<text><![CDATA[软件ID]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="252" y="0" width="123" height="29"/>
+				<reportElement x="329" y="0" width="123" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -110,7 +117,7 @@ order by t1.auditstatus]]>
 				<text><![CDATA[提取通用名]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="29" y="0" width="39" height="29"/>
+				<reportElement x="95" y="0" width="50" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -123,7 +130,7 @@ order by t1.auditstatus]]>
 				<text><![CDATA[中/西类别]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="2652" y="0" width="53" height="29"/>
+				<reportElement x="2750" y="0" width="53" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -136,7 +143,7 @@ order by t1.auditstatus]]>
 				<text><![CDATA[是否抗菌药物]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="375" y="0" width="37" height="29"/>
+				<reportElement x="452" y="0" width="37" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -149,7 +156,7 @@ order by t1.auditstatus]]>
 				<text><![CDATA[给药途径]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="662" y="0" width="41" height="29"/>
+				<reportElement x="739" y="0" width="41" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -162,7 +169,7 @@ order by t1.auditstatus]]>
 				<text><![CDATA[医保类别]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="2154" y="0" width="191" height="29"/>
+				<reportElement x="2252" y="0" width="191" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -188,7 +195,7 @@ order by t1.auditstatus]]>
 				<text><![CDATA[序号]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="412" y="0" width="68" height="29"/>
+				<reportElement x="489" y="0" width="68" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -201,7 +208,7 @@ order by t1.auditstatus]]>
 				<text><![CDATA[剂型]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="480" y="0" width="129" height="29"/>
+				<reportElement x="557" y="0" width="129" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -214,7 +221,7 @@ order by t1.auditstatus]]>
 				<text><![CDATA[规格]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="1341" y="0" width="623" height="29"/>
+				<reportElement x="1418" y="0" width="644" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -227,7 +234,7 @@ order by t1.auditstatus]]>
 				<text><![CDATA[适应症及药理作用/（功能主治）]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="1964" y="0" width="190" height="29"/>
+				<reportElement x="2062" y="0" width="190" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -240,7 +247,7 @@ order by t1.auditstatus]]>
 				<text><![CDATA[申请理由]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="2345" y="0" width="307" height="29"/>
+				<reportElement x="2443" y="0" width="307" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -253,7 +260,7 @@ order by t1.auditstatus]]>
 				<text><![CDATA[药理小类]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="2771" y="0" width="53" height="29"/>
+				<reportElement x="2869" y="0" width="53" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -266,7 +273,7 @@ order by t1.auditstatus]]>
 				<text><![CDATA[申请科室]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="2824" y="0" width="39" height="29"/>
+				<reportElement x="2922" y="0" width="39" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -279,7 +286,7 @@ order by t1.auditstatus]]>
 				<text><![CDATA[申请医生]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="2863" y="0" width="78" height="29"/>
+				<reportElement x="2961" y="0" width="78" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -292,7 +299,7 @@ order by t1.auditstatus]]>
 				<text><![CDATA[提交申请时间]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="845" y="0" width="496" height="29"/>
+				<reportElement x="922" y="0" width="496" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -305,7 +312,7 @@ order by t1.auditstatus]]>
 				<text><![CDATA[用法用量]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="609" y="0" width="53" height="29"/>
+				<reportElement x="686" y="0" width="53" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -318,7 +325,7 @@ order by t1.auditstatus]]>
 				<text><![CDATA[是否复方制剂]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="703" y="0" width="142" height="29"/>
+				<reportElement x="780" y="0" width="142" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -331,7 +338,7 @@ order by t1.auditstatus]]>
 				<text><![CDATA[成分]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="2705" y="0" width="66" height="29"/>
+				<reportElement x="2803" y="0" width="66" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -344,7 +351,7 @@ order by t1.auditstatus]]>
 				<text><![CDATA[申报类型（新增通用名、规格）]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="2941" y="0" width="59" height="29"/>
+				<reportElement x="3039" y="0" width="61" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -355,6 +362,19 @@ order by t1.auditstatus]]>
 					<font fontName="文鼎ＰＬ简报宋" size="8"/>
 				</textElement>
 				<text><![CDATA[审核状态]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="29" y="0" width="66" height="29"/>
+				<box>
+					<topPen lineWidth="0.5"/>
+					<leftPen lineWidth="0.5"/>
+					<bottomPen lineWidth="0.5"/>
+					<rightPen lineWidth="0.5"/>
+				</box>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font fontName="文鼎ＰＬ简报宋" size="8"/>
+				</textElement>
+				<text><![CDATA[编号]]></text>
 			</staticText>
 		</band>
 	</title>
@@ -367,7 +387,7 @@ order by t1.auditstatus]]>
 	<detail>
 		<band height="29" splitType="Stretch">
 			<textField>
-				<reportElement x="110" y="0" width="142" height="29"/>
+				<reportElement x="187" y="0" width="142" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -380,7 +400,7 @@ order by t1.auditstatus]]>
 				<textFieldExpression><![CDATA[$F{extract_common_name}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="68" y="0" width="42" height="29"/>
+				<reportElement x="145" y="0" width="42" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -393,7 +413,7 @@ order by t1.auditstatus]]>
 				<textFieldExpression><![CDATA[$F{match_number}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="252" y="0" width="123" height="29"/>
+				<reportElement x="329" y="0" width="123" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -406,7 +426,7 @@ order by t1.auditstatus]]>
 				<textFieldExpression><![CDATA[$F{common_name}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="29" y="0" width="39" height="29"/>
+				<reportElement x="95" y="0" width="50" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -419,7 +439,7 @@ order by t1.auditstatus]]>
 				<textFieldExpression><![CDATA[$F{drugcategory}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="2652" y="0" width="53" height="29"/>
+				<reportElement x="2750" y="0" width="53" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -432,7 +452,7 @@ order by t1.auditstatus]]>
 				<textFieldExpression><![CDATA[$F{antibacterialsed}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="375" y="0" width="37" height="29"/>
+				<reportElement x="452" y="0" width="37" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -445,7 +465,7 @@ order by t1.auditstatus]]>
 				<textFieldExpression><![CDATA[$F{administration_id}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="662" y="0" width="41" height="29"/>
+				<reportElement x="739" y="0" width="41" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -458,7 +478,7 @@ order by t1.auditstatus]]>
 				<textFieldExpression><![CDATA[$F{medical_category}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="2154" y="0" width="191" height="29"/>
+				<reportElement x="2252" y="0" width="191" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -466,12 +486,12 @@ order by t1.auditstatus]]>
 					<rightPen lineWidth="0.5"/>
 				</box>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font fontName="文鼎ＰＬ简报宋" size="8"/>
+					<font fontName="文鼎ＰＬ简报宋" size="5"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{chemical_big_category}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="2345" y="0" width="307" height="29"/>
+				<reportElement x="2443" y="0" width="307" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -479,7 +499,7 @@ order by t1.auditstatus]]>
 					<rightPen lineWidth="0.5"/>
 				</box>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font fontName="文鼎ＰＬ简报宋" size="8"/>
+					<font fontName="文鼎ＰＬ简报宋" size="5"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{chemical_sub_category}]]></textFieldExpression>
 			</textField>
@@ -498,7 +518,7 @@ order by t1.auditstatus]]>
 				<textFieldExpression><![CDATA[$V{index}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="412" y="0" width="68" height="29"/>
+				<reportElement x="489" y="0" width="68" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -511,7 +531,7 @@ order by t1.auditstatus]]>
 				<textFieldExpression><![CDATA[$F{pill}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="480" y="0" width="129" height="29"/>
+				<reportElement x="557" y="0" width="129" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -524,7 +544,7 @@ order by t1.auditstatus]]>
 				<textFieldExpression><![CDATA[$F{specifications}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="845" y="0" width="496" height="29"/>
+				<reportElement x="922" y="0" width="496" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -532,12 +552,12 @@ order by t1.auditstatus]]>
 					<rightPen lineWidth="0.5"/>
 				</box>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font fontName="文鼎ＰＬ简报宋" size="8"/>
+					<font fontName="文鼎ＰＬ简报宋" size="5"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{dosage}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="1341" y="0" width="623" height="29"/>
+				<reportElement x="1418" y="0" width="834" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -545,12 +565,12 @@ order by t1.auditstatus]]>
 					<rightPen lineWidth="0.5"/>
 				</box>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font fontName="文鼎ＰＬ简报宋" size="8"/>
+					<font fontName="文鼎ＰＬ简报宋" size="5"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{indications_effect}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="1964" y="0" width="190" height="29"/>
+				<reportElement x="2062" y="0" width="190" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -563,7 +583,7 @@ order by t1.auditstatus]]>
 				<textFieldExpression><![CDATA[$F{declare_reason}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement x="2771" y="0" width="53" height="29"/>
+				<reportElement x="2869" y="0" width="53" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -576,7 +596,7 @@ order by t1.auditstatus]]>
 				<textFieldExpression><![CDATA[$F{departname}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="2824" y="0" width="39" height="29"/>
+				<reportElement x="2922" y="0" width="39" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -589,7 +609,7 @@ order by t1.auditstatus]]>
 				<textFieldExpression><![CDATA[$F{realname}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement x="2863" y="0" width="78" height="29"/>
+				<reportElement x="2961" y="0" width="78" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -602,7 +622,7 @@ order by t1.auditstatus]]>
 				<textFieldExpression><![CDATA[(new SimpleDateFormat("yyyy年MM月dd日")).format($F{declare_date})]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="609" y="0" width="53" height="29"/>
+				<reportElement x="686" y="0" width="53" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -615,7 +635,7 @@ order by t1.auditstatus]]>
 				<textFieldExpression><![CDATA[$F{preparationed}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement x="703" y="0" width="142" height="29"/>
+				<reportElement x="780" y="0" width="142" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -628,7 +648,7 @@ order by t1.auditstatus]]>
 				<textFieldExpression><![CDATA[$F{constituent}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement x="2705" y="0" width="66" height="29"/>
+				<reportElement x="2803" y="0" width="66" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -641,7 +661,7 @@ order by t1.auditstatus]]>
 				<textFieldExpression><![CDATA[$F{declarecategory}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="2941" y="0" width="59" height="29"/>
+				<reportElement x="3039" y="0" width="61" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -652,6 +672,19 @@ order by t1.auditstatus]]>
 					<font fontName="文鼎ＰＬ简报宋" size="8"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{auditstatus}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="29" y="0" width="66" height="29"/>
+				<box>
+					<topPen lineWidth="0.5"/>
+					<leftPen lineWidth="0.5"/>
+					<bottomPen lineWidth="0.5"/>
+					<rightPen lineWidth="0.5"/>
+				</box>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font fontName="文鼎ＰＬ简报宋" size="8"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{id}]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
