--- a/yjk-web/src/main/report/drugdeclaretongjidetail.jrxml
+++ b/yjk-web/src/main/report/drugdeclaretongjidetail.jrxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="commonname" language="groovy" pageWidth="3000" pageHeight="842" columnWidth="3000" leftMargin="0" rightMargin="0" topMargin="0" bottomMargin="0">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="commonname" language="groovy" pageWidth="3100" pageHeight="842" columnWidth="3100" leftMargin="0" rightMargin="0" topMargin="0" bottomMargin="0">
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
@@ -24,8 +24,14 @@
 	<parameter name="SUBREPORT_DIR" class="java.lang.String" isForPrompting="false">
 		<defaultValueExpression><![CDATA["E:\\rmyy_work\\doc\\yjk\\"]]></defaultValueExpression>
 	</parameter>
+	<parameter name="declareStartDate" class="java.sql.Timestamp">
+		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
+	</parameter>
+	<parameter name="declareEndDate" class="java.sql.Timestamp">
+		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
+	</parameter>
 	<queryString>
-		<![CDATA[SELECT t4.id, declare_date, declare_reason, dosage, indications_effect, remark,declarecategory,
+		<![CDATA[SELECT to_char(t1.id,'00000000') as idNo,t4.id, declare_date, declare_reason, dosage, indications_effect, remark,declarecategory,
 case when is_preparationed then '是' else '否' end as preparationed,constituent,t2.realname,
 t4.common_name,t4.administration_id,t4.pill,t4.specifications,t4.medical_category,
 t5.common_name as extract_common_name,t5.match_number,t5.chemical_big_category,t5.chemical_sub_category,
@@ -39,9 +45,10 @@ left join zd_common_name t5 on t4.common_name_id=t5.id
 where (t1.system_parameter_id =$P{systemParameterId} or $P{systemParameterId} is null)
 and t1.auditstatus like '%'||$P{auditstatus}||'%' and  t2.realname like '%'||$P{realname}||'%'
 and t5.drugcategory like  '%'||$P{drugcategory}||'%' and (t1.declarecategory like '%'||$P{declarecategory}||'%' or $P{declarecategory}='')
-and ((select string_agg(t7.name,',') from sec_organization t7 where t7.id in (select t6.organization_id from sec_user_organization_job t6 where t6.user_id=t1.user_id)) like '%'||$P{departname}||'%' or $P{departname} = '')
-order by t1.auditstatus]]>
+and ((select string_agg(t7.name,',') from sec_organization t7 where t7.id in (select t6.organization_id from sec_user_organization_job t6 where t6.user_id=t1.user_id)) like '%'||$P{departname}||'%' or $P{departname} = '') and t1.declare_date>=$P{declareStartDate} and t1.declare_date<=$P{declareEndDate}
+order by t1.id]]>
 	</queryString>
+	<field name="idno" class="java.lang.String"/>
 	<field name="id" class="java.lang.Long"/>
 	<field name="declare_date" class="java.sql.Timestamp"/>
 	<field name="declare_reason" class="java.lang.String"/>
@@ -75,7 +82,7 @@ order by t1.auditstatus]]>
 	<title>
 		<band height="29" splitType="Stretch">
 			<staticText>
-				<reportElement x="110" y="0" width="142" height="29"/>
+				<reportElement x="167" y="0" width="142" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -88,7 +95,7 @@ order by t1.auditstatus]]>
 				<text><![CDATA[软件通用名]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="68" y="0" width="42" height="29"/>
+				<reportElement x="125" y="0" width="42" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -101,7 +108,7 @@ order by t1.auditstatus]]>
 				<text><![CDATA[软件ID]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="252" y="0" width="123" height="29"/>
+				<reportElement x="309" y="0" width="123" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -114,7 +121,7 @@ order by t1.auditstatus]]>
 				<text><![CDATA[提取通用名]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="29" y="0" width="39" height="29"/>
+				<reportElement x="86" y="0" width="39" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -127,7 +134,7 @@ order by t1.auditstatus]]>
 				<text><![CDATA[中/西类别]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="2652" y="0" width="53" height="29"/>
+				<reportElement x="2752" y="0" width="53" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -140,7 +147,7 @@ order by t1.auditstatus]]>
 				<text><![CDATA[是否抗菌药物]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="375" y="0" width="37" height="29"/>
+				<reportElement x="432" y="0" width="37" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -153,7 +160,7 @@ order by t1.auditstatus]]>
 				<text><![CDATA[给药途径]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="662" y="0" width="41" height="29"/>
+				<reportElement x="722" y="0" width="41" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -166,7 +173,7 @@ order by t1.auditstatus]]>
 				<text><![CDATA[医保类别]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="2154" y="0" width="191" height="29"/>
+				<reportElement x="2254" y="0" width="191" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -192,7 +199,7 @@ order by t1.auditstatus]]>
 				<text><![CDATA[序号]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="412" y="0" width="68" height="29"/>
+				<reportElement x="469" y="0" width="68" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -205,7 +212,7 @@ order by t1.auditstatus]]>
 				<text><![CDATA[剂型]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="480" y="0" width="129" height="29"/>
+				<reportElement x="537" y="0" width="132" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -218,7 +225,7 @@ order by t1.auditstatus]]>
 				<text><![CDATA[规格]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="1341" y="0" width="623" height="29"/>
+				<reportElement x="1441" y="0" width="623" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -231,7 +238,7 @@ order by t1.auditstatus]]>
 				<text><![CDATA[适应症及药理作用/（功能主治）]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="1964" y="0" width="190" height="29"/>
+				<reportElement x="2064" y="0" width="190" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -244,7 +251,7 @@ order by t1.auditstatus]]>
 				<text><![CDATA[申请理由]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="2345" y="0" width="307" height="29"/>
+				<reportElement x="2445" y="0" width="307" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -257,7 +264,7 @@ order by t1.auditstatus]]>
 				<text><![CDATA[药理小类]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="2771" y="0" width="53" height="29"/>
+				<reportElement x="2871" y="0" width="53" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -270,7 +277,7 @@ order by t1.auditstatus]]>
 				<text><![CDATA[申请科室]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="2824" y="0" width="39" height="29"/>
+				<reportElement x="2924" y="0" width="39" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -283,7 +290,7 @@ order by t1.auditstatus]]>
 				<text><![CDATA[申请医生]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="2863" y="0" width="78" height="29"/>
+				<reportElement x="2963" y="0" width="78" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -296,7 +303,7 @@ order by t1.auditstatus]]>
 				<text><![CDATA[提交申请时间]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="845" y="0" width="496" height="29"/>
+				<reportElement x="945" y="0" width="496" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -309,7 +316,7 @@ order by t1.auditstatus]]>
 				<text><![CDATA[用法用量]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="609" y="0" width="53" height="29"/>
+				<reportElement x="669" y="0" width="53" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -322,7 +329,7 @@ order by t1.auditstatus]]>
 				<text><![CDATA[是否复方制剂]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="703" y="0" width="142" height="29"/>
+				<reportElement x="763" y="0" width="182" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -335,7 +342,7 @@ order by t1.auditstatus]]>
 				<text><![CDATA[成分]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="2705" y="0" width="66" height="29"/>
+				<reportElement x="2805" y="0" width="66" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -348,7 +355,7 @@ order by t1.auditstatus]]>
 				<text><![CDATA[申报类型（新增通用名、规格）]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="2941" y="0" width="59" height="29"/>
+				<reportElement x="3041" y="0" width="59" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -360,6 +367,19 @@ order by t1.auditstatus]]>
 				</textElement>
 				<text><![CDATA[审核状态]]></text>
 			</staticText>
+			<staticText>
+				<reportElement x="29" y="0" width="57" height="29"/>
+				<box>
+					<topPen lineWidth="0.5"/>
+					<leftPen lineWidth="0.5"/>
+					<bottomPen lineWidth="0.5"/>
+					<rightPen lineWidth="0.5"/>
+				</box>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font fontName="文鼎ＰＬ简报宋" size="8"/>
+				</textElement>
+				<text><![CDATA[编号]]></text>
+			</staticText>
 		</band>
 	</title>
 	<pageHeader>
@@ -369,9 +389,9 @@ order by t1.auditstatus]]>
 		<band splitType="Stretch"/>
 	</columnHeader>
 	<detail>
-		<band height="136" splitType="Stretch">
+		<band height="184" splitType="Stretch">
 			<textField>
-				<reportElement x="110" y="0" width="142" height="29"/>
+				<reportElement x="167" y="0" width="142" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -384,7 +404,7 @@ order by t1.auditstatus]]>
 				<textFieldExpression><![CDATA[$F{extract_common_name}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="68" y="0" width="42" height="29"/>
+				<reportElement x="125" y="0" width="42" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -397,7 +417,7 @@ order by t1.auditstatus]]>
 				<textFieldExpression><![CDATA[$F{match_number}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="252" y="0" width="123" height="29"/>
+				<reportElement x="309" y="0" width="123" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -410,7 +430,7 @@ order by t1.auditstatus]]>
 				<textFieldExpression><![CDATA[$F{common_name}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="29" y="0" width="39" height="29"/>
+				<reportElement x="86" y="0" width="39" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -423,7 +443,7 @@ order by t1.auditstatus]]>
 				<textFieldExpression><![CDATA[$F{drugcategory}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="2652" y="0" width="53" height="29"/>
+				<reportElement x="2752" y="0" width="53" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -436,7 +456,7 @@ order by t1.auditstatus]]>
 				<textFieldExpression><![CDATA[$F{antibacterialsed}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="375" y="0" width="37" height="29"/>
+				<reportElement x="432" y="0" width="37" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -449,7 +469,7 @@ order by t1.auditstatus]]>
 				<textFieldExpression><![CDATA[$F{administration_id}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="662" y="0" width="41" height="29"/>
+				<reportElement x="722" y="0" width="41" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -462,7 +482,7 @@ order by t1.auditstatus]]>
 				<textFieldExpression><![CDATA[$F{medical_category}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="2154" y="0" width="191" height="29"/>
+				<reportElement x="2254" y="0" width="191" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -475,7 +495,7 @@ order by t1.auditstatus]]>
 				<textFieldExpression><![CDATA[$F{chemical_big_category}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="2345" y="0" width="307" height="29"/>
+				<reportElement x="2445" y="0" width="307" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -502,7 +522,7 @@ order by t1.auditstatus]]>
 				<textFieldExpression><![CDATA[$V{index}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="412" y="0" width="68" height="29"/>
+				<reportElement x="469" y="0" width="68" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -515,7 +535,7 @@ order by t1.auditstatus]]>
 				<textFieldExpression><![CDATA[$F{pill}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="480" y="0" width="129" height="29"/>
+				<reportElement x="537" y="0" width="132" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -528,7 +548,7 @@ order by t1.auditstatus]]>
 				<textFieldExpression><![CDATA[$F{specifications}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="845" y="0" width="496" height="29"/>
+				<reportElement x="945" y="0" width="496" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -541,7 +561,7 @@ order by t1.auditstatus]]>
 				<textFieldExpression><![CDATA[$F{dosage}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="1341" y="0" width="623" height="29"/>
+				<reportElement x="1441" y="0" width="623" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -554,7 +574,7 @@ order by t1.auditstatus]]>
 				<textFieldExpression><![CDATA[$F{indications_effect}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="1964" y="0" width="190" height="29"/>
+				<reportElement x="2064" y="0" width="190" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -567,7 +587,7 @@ order by t1.auditstatus]]>
 				<textFieldExpression><![CDATA[$F{declare_reason}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement x="2771" y="0" width="53" height="29"/>
+				<reportElement x="2871" y="0" width="53" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -580,7 +600,7 @@ order by t1.auditstatus]]>
 				<textFieldExpression><![CDATA[$F{departname}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="2824" y="0" width="39" height="29"/>
+				<reportElement x="2924" y="0" width="39" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -593,7 +613,7 @@ order by t1.auditstatus]]>
 				<textFieldExpression><![CDATA[$F{realname}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement x="2863" y="0" width="78" height="29"/>
+				<reportElement x="2963" y="0" width="78" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -606,7 +626,7 @@ order by t1.auditstatus]]>
 				<textFieldExpression><![CDATA[(new SimpleDateFormat("yyyy年MM月dd日")).format($F{declare_date})]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="609" y="0" width="53" height="29"/>
+				<reportElement x="669" y="0" width="53" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -619,7 +639,7 @@ order by t1.auditstatus]]>
 				<textFieldExpression><![CDATA[$F{preparationed}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement x="703" y="0" width="142" height="29"/>
+				<reportElement x="763" y="0" width="182" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -632,7 +652,7 @@ order by t1.auditstatus]]>
 				<textFieldExpression><![CDATA[$F{constituent}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement x="2705" y="0" width="66" height="29"/>
+				<reportElement x="2805" y="0" width="66" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -645,7 +665,7 @@ order by t1.auditstatus]]>
 				<textFieldExpression><![CDATA[$F{declarecategory}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="2941" y="0" width="59" height="29"/>
+				<reportElement x="3041" y="0" width="59" height="29"/>
 				<box>
 					<topPen lineWidth="0.5"/>
 					<leftPen lineWidth="0.5"/>
@@ -666,13 +686,26 @@ order by t1.auditstatus]]>
 				<subreportExpression><![CDATA[$P{SUBREPORT_DIR} + "hospitalcontentssub.jasper"]]></subreportExpression>
 			</subreport>
 			<subreport>
-				<reportElement x="0" y="111" width="180" height="25"/>
+				<reportElement x="0" y="159" width="180" height="25"/>
 				<subreportParameter name="commonNameContentsId">
 					<subreportParameterExpression><![CDATA[$F{id}]]></subreportParameterExpression>
 				</subreportParameter>
 				<connectionExpression><![CDATA[$P{REPORT_CONNECTION}]]></connectionExpression>
 				<subreportExpression><![CDATA[$P{SUBREPORT_DIR} + "commonnamecontentssub.jasper"]]></subreportExpression>
 			</subreport>
+			<textField>
+				<reportElement x="29" y="0" width="57" height="29"/>
+				<box>
+					<topPen lineWidth="0.5"/>
+					<leftPen lineWidth="0.5"/>
+					<bottomPen lineWidth="0.5"/>
+					<rightPen lineWidth="0.5"/>
+				</box>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font fontName="文鼎ＰＬ简报宋" size="8"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{idno}]]></textFieldExpression>
+			</textField>
 		</band>
 	</detail>
 	<columnFooter>
